--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# python 3.12.0
 torch
 torchvision
 scikit-learn
@@ -7,3 +8,6 @@ pandas
 matplotlib
 seaborn
 ipykernel
+scikit-image
+grad-cam
+groundingdino-py
